# micofe

./: .gitignore  Dockerfile  README.md  env.sh
.github/workflows/: docs.yml
doc/: .gitlab-ci.yml  requirements.txt
doc/source/: architecture.rst  coding_conventions.rst  conf.py  cpp.rst  demonstrator.rst  dev_flow.rst  emiso.rst  glossary.rst  index.rst  introduction.rst  lvgl.rst  micofe.rst  portainer.rst  syscalls_alignment.rst  user_guide.rst
doc/source/_static/: theme_overrides.css
doc/source/base_extension/: armbian.rst  base_extension.rst  buildroot.rst  debootstrap.rst  raspberrypiOS.rst  uboot.rst
doc/source/build_system/: build_system.rst
doc/source/img/: Infrabase.drawio  micofe.drawio
doc/source/micofe/: emiso.rst  syscalls_alignment.rst
doc/source/micofe/pictures/: micofe.drawio
doc/source/rootfs/: linux_usr.rst  rootfs.rst
linux/rootfs/: .gitignore  build.sh  deploy.sh  mount.sh  umount.sh
linux/usr/: .gitignore  CMakeLists.txt  build.sh  deploy.sh  depmod.sh
linux/usr/lib/: CMakeLists.txt
linux/usr/src/examples/: CMakeLists.txt  hello.c
linux/usr/src/modules/: Makefile  modtry.c  qemu.c
scripts/: build.sh  deploy.sh  diffdir.sh  init_storage.sh  mount.sh  st.sh  stg.sh  stv.sh  stvg.sh  umount.sh
scripts/common/: bblayers.sh
